030530 release
--------------

fixed a few cache synchronization bugs in disconnected mode.

we now show from addresses even if they aren't correctly formatted.

fixed a bug where cached messages wouldn't show incorrectly identified
'7-bit' encoded messages.

disconnected imap now caches message flags correctly.

added a hack way to override errors like a MissingStartBoundary.

keybindings now work in preview pane mode with the preview panel selected.

fixed a deadlock in FolderInfo.copyMessages().

made opening folders in the background the default.

removed the old code that messed with the scroll move during internal pane
moves.  should be all ok under jdk 1.4.

fixed a bug where unsubscribing to the last subfolder of a folder doesn't
work.

modified the MessageProxy class so that we don't create lots and lots of
unnecessary actions.

fixed a couple of memory leaks

the outbox folder now gets the correct toolbar in preview pane mode.

switched pop local store from mbox to maildir.

for internal frames, focus now goes to the correct component instead of to
the toolbar.

030329 release
--------------

folder windows now remember both their last location and their last size

changed the order of disconnection for Stores.  this may eliminate some errors
we were seeing while switching to disconnected mode.

fixed a bug where unsubscribing to the current folder in preview pane mode
would cause a NPE the next time a folder was selected.

Added a way to delete a folder.

Pooka now remembers its location on screen when restarting.

fixed a problem in Preview mode in which the folder toolbar wouldn't get
activated on startup.

optimized the caching system somewhat so that we're not writing files over
and over agian to the filesystem.  this may also fix a problem where a
message could be cached as blank if the connection to the store broke at
just the right time.

attachment file choosers now remember your last directory, instead of always
starting in your home directory.
